feat: Network access configuration for Docker deployment

--- a/backend/.env.docker
+++ b/backend/.env.docker
@@ -1,11 +1,12 @@
 # Backend environment for Docker runtime
 NODE_ENV=production
 PORT=3001
-JWT_SECRET=super-secret
-JWT_REFRESH_SECRET=super-refresh
+JWT_SECRET=vagalume_super_secret_key_production_2025_min_32_chars_here
+JWT_REFRESH_SECRET=vagalume_refresh_secret_key_production_2025_different_key
 JWT_EXPIRE=15m
 JWT_REFRESH_EXPIRE=7d
-CORS_ORIGIN=http://localhost:5173,http://localhost:5174
+CORS_ORIGIN=*
+CORS_CREDENTIALS=true
 REDIS_URL=redis://localhost:6379
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
@@ -15,3 +16,4 @@ SMTP_PASS=
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX_REQUESTS=1000
 LOG_LEVEL=info
+BCRYPT_ROUNDS=12
