--- a/frontend-vue/Dockerfile
+++ b/frontend-vue/Dockerfile
@@ -4,11 +4,21 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
+# Build sem variáveis - será configurado em runtime
 RUN npm run build
 
 # Stage 2: serve with Nginx
 FROM nginx:1.27-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Instalar gettext para envsubst
+RUN apk add --no-cache gettext
+
+# Script de inicialização
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
+
 EXPOSE 80
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
